--- a/style.css
+++ b/style.css
@@ -92,4 +92,33 @@ text1{
     height:100vh;
     width: 50%;
 }
-
+.section2{
+    margin-top: 70px;
+    padding: 50px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.title-2{
+    text-align: center;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.card1{
+    width: 350px;
+    height: 250px;
+    border: 1px solid gray;
+    text-align: center;
+    box-shadow: 8px 8px 16px gray ;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 40px;
+}
+.card1:hover{
+    border: 1px solid #c7ca09;
+    margin-top: -20px;
+    transition: .8ms;
+}
+.gym-icon{
+    width: 70px;
+}
